blueGreen/nginx/deployment/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stefan-test-subs
  labels:
    test: "08:38"
