blueGreen/nginx/deployment/nginx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: nginx-service
    weight: 100
  wildcardPolicy: None
